Update README with installation guide